	PR inline-asm/35160 	* function.c (match_asm_constraints_1): Don't replace the same input 	multiple times.

* gcc.target/i386/pr35160.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@132263 138bc75d-0d04-0410-961f-82ee72b054a4